--- a/src/WebAppCoreRC2/Views/Estudos/Index.cshtml
+++ b/src/WebAppCoreRC2/Views/Estudos/Index.cshtml
@@ -1,4 +1,14 @@
 ﻿@{ 
    
 }
+@*https://blog.mariusschulz.com/2015/12/14/tag-helpers-in-asp-net-mvc-6*@
 <h1>Estudos</h1>
+<form method="post" action="/estudos/index">
+    <button-submit button-label="Gravar" button-css="p" button-style="Default"></button-submit>
+
+    <button-submit button-label="Alterar" button-style="Success"></button-submit>
+
+    <button-submit button-label="Salvar" button-style="Primary" button-glyphicon="Check"></button-submit>
+
+    <button-submit button-glyphicon="Cog"></button-submit>
+</form>
