--- a/src/WebAppCoreRC2/Views/Shared/_Layout.cshtml
+++ b/src/WebAppCoreRC2/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-controller="Estudos" asp-action="Index">Estudos</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
