--- a/src/WebAppCoreRC2/Views/_ViewImports.cshtml
+++ b/src/WebAppCoreRC2/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using WebAppCoreRC2.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Canducci.Helpers
