add button size

--- a/src/WebAppCoreRC2/Views/Estudos/Index.cshtml
+++ b/src/WebAppCoreRC2/Views/Estudos/Index.cshtml
@@ -4,6 +4,7 @@
 @*https://blog.mariusschulz.com/2015/12/14/tag-helpers-in-asp-net-mvc-6*@
 <h1>Estudos</h1>
 <form method="post" action="/estudos/index">
+
     <button-submit button-label="Gravar" button-css="p" button-style="Default"></button-submit>
 
     <button-submit button-label="Alterar" button-style="Success"></button-submit>
@@ -11,4 +12,19 @@
     <button-submit button-label="Salvar" button-style="Primary" button-glyphicon="Check"></button-submit>
 
     <button-submit button-glyphicon="Cog"></button-submit>
+
+    <div>
+        <button-submit button-glyphicon="Music" button-label="Música" button-style="Success" button-size="Default"></button-submit>
+        <button-submit button-glyphicon="Music" button-label="Música" button-style="Success" button-size="DefaultAndBlock"></button-submit>
+        <button-submit button-glyphicon="Music" button-label="Música" button-style="Success" button-size="ExtraSmall"></button-submit>
+        <button-submit button-glyphicon="Music" button-label="Música" button-style="Success" button-size="ExtraSmallAndBlock"></button-submit>
+        <button-submit button-glyphicon="Music" button-label="Música" button-style="Success" button-size="Large"></button-submit>
+        <button-submit button-glyphicon="Music" button-label="Música" button-style="Success" button-size="LargeAndBlock"></button-submit>
+        <button-submit button-glyphicon="Music" button-label="Música" button-style="Success" button-size="Small"></button-submit>
+        <button-submit button-glyphicon="Music" button-label="Música" button-style="Success" button-size="SmallAndBlock"></button-submit>
+    </div>
+    <div>
+        <button-submit button-glyphicon="Bold" button-label="Negrito" button-style="Primary" button-size="Default" button-disabled="true"></button-submit>
+        <button-submit button-glyphicon="Bold" button-label="Negrito" button-style="Primary" button-size="Default"></button-submit>
+    </div>
 </form>
